# SynthDoc

./: .gitignore  DATASET_MANAGEMENT.md  MULTILINGUAL_DEMO_RESULTS.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  demo_full_generation.py  demo_multilingual_full_pipeline.py  env.template  pyproject.toml  show_multilingual_results.py  test.py  test_all_workflows.py  test_document_translation_workflow.py  test_full_integration.py  test_implementation.py  test_integrated_implementation.py  test_quick_integration.py  upload_to_hf.py
docs/: MODEL_MANAGEMENT_SUMMARY.md  QUICKSTART.md  USAGE_GUIDE.md  configuration.md  index.md  installation.md
docs/workflows/: document_translation.md  raw_documents.md  vqa_generation.md
examples/: README.md  advanced_augmentation.py  augmentation_examples.py  basic_usage.py  dataset_management_examples.py  integration_example.py  litellm_usage.py  model_management_example.py  multilingual_demo.py  raw_document_generation_example.py  vqa_pipeline.py  workflow_examples.py
generated_docs/: document_en_18005.pdf_summary.json  document_en_75640.pdf_summary.json  document_en_81245.pdf_summary.json  document_es_11318.pdf_summary.json  document_es_41654.pdf_summary.json  document_zh_37224.pdf_summary.json
generated_docs/metadata/: document_en_18005.pdf_page_1_metadata.json  document_en_75640.pdf_page_1_metadata.json  document_en_75640.pdf_page_2_metadata.json  document_en_81245.pdf_page_1_metadata.json  document_es_11318.pdf_page_1_metadata.json  document_es_41654.pdf_page_1_metadata.json  document_es_41654.pdf_page_2_metadata.json  document_zh_37224.pdf_page_1_metadata.json  document_zh_37224.pdf_page_2_metadata.json
handwriting_data/: data-00000-of-00001.arrow  dataset_info.json  state.json
multilingual_demo_20250701_022234/: pipeline_summary.json
multilingual_demo_20250701_022234/hf_datasets/handwriting/: data-00000-of-00001.arrow  dataset_info.json  state.json
multilingual_demo_20250701_022234/hf_datasets/raw_documents/: data-00000-of-00001.arrow  dataset_info.json  state.json
multilingual_demo_20250701_022234/hf_datasets/vqa/: data-00000-of-00001.arrow  dataset_info.json  state.json
multilingual_demo_20250701_022234/vqa/en/: vqa_data.json
synthdoc/: __init__.py  augmentations.py  cli.py  config.py  core.py  dataset_manager.py  font.py  generators.py  image_gen.py  languages.py  layouts.py  models.py  models_manager.py  realism_improvements.py  tables.py  translation.py  utils.py  workflows.py
synthdoc/augmentation/: __init__.py  config.py  engine.py  processor.py
synthdoc/fonts/: __init__.py
synthdoc/workflows/: __init__.py  base.py
synthdoc/workflows/document_translator/: __init__.py  workflow.py
synthdoc/workflows/handwriting_generator/: __init__.py  workflow.py
synthdoc/workflows/layout_augmenter/: __init__.py  workflow.py
synthdoc/workflows/pdf_augmenter/: __init__.py  workflow.py
synthdoc/workflows/raw_document_generator/: __init__.py  ai_image_generator.py  chart_generator.py  content_analyzer.py  image_gen.py  table_generator.py  text_utils.py  workflow.py
synthdoc/workflows/vqa_generator/: __init__.py  workflow.py
synthdoc_demo_output_20250701_000347/: COMPLETE_DEMO_SUMMARY.txt
synthdoc_demo_output_20250701_000347/1_raw_documents/: business_analysis_summary.txt  document_en_12354.pdf_summary.json  document_en_20644.pdf_summary.json  technical_report_summary.txt
synthdoc_demo_output_20250701_000347/1_raw_documents/metadata/: document_en_12354.pdf_page_1_metadata.json  document_en_20644.pdf_page_1_metadata.json  document_en_20644.pdf_page_2_metadata.json
synthdoc_demo_output_20250701_000347/2_handwriting_samples/: english_cursive_info.txt  english_print_info.txt  multilingual_sample_info.txt
synthdoc_demo_output_20250701_000347/3_layout_augmentation/: layout_summary.txt
synthdoc_demo_output_20250701_000347/4_vqa_datasets/: vqa_summary.txt
synthdoc_demo_output_20250701_000347/5_language_samples/: language_support_summary.txt
tests/: test.py  test_augmentation.py  test_dataset_management.py  test_synthdoc.py  test_workflows.py
